--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,21 @@
-.App {
+body{
+  height: 100%;
+}
+
+.header{
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+#quote-box{
+  height: 300px;
+  max-width: 500px;
+  background-color: black;
+  margin: auto;
+  text-familty: courier;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#text{
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-align: center;
+  
 }
